# project-3-minesweeper

./: Board.cpp  Board.hpp  Button.cpp  Button.hpp  CMakeLists.txt  GameWindow.cpp  GameWindow.hpp  LeaderboardWindow.cpp  LeaderboardWindow.hpp  PossibleOutcomes.hpp  README.md  Tile.cpp  Tile.hpp  WelcomeWindow.cpp  WelcomeWindow.hpp  config.hpp  main.cpp
files/: config.cfg  leaderboard.txt
files/images/: number_6.png:Zone.Identifier
